--- a/BUILD.gn
+++ b/BUILD.gn
@@ -116,6 +116,7 @@ if (is_android) {
       "$root_build_dir/brave_100_percent.pak",
       "$root_build_dir/brave_resources.pak",
       "//brave/LICENSE.html",
+      "//brave/android/java/org/chromium/chrome/browser/ntp/ntp_news_optin_icon_animation.json",
       "//brave/android/java/org/chromium/chrome/browser/onboarding/animations/onboarding_ads.json",
       "//brave/android/java/org/chromium/chrome/browser/onboarding/animations/onboarding_ads_notification.json",
       "//brave/android/java/org/chromium/chrome/browser/onboarding/animations/onboarding_rewards.json",
