--- a/package.json
+++ b/package.json
@@ -280,11 +280,8 @@
     "@types/jest": "26.0.24",
     "@types/qr-image": "3.2.3",
     "@types/react": "17.0.2",
-    "@types/react-beautiful-dnd": "11.0.5",
-    "@types/react-dnd": "2.0.36",
     "@types/react-dom": "17.0.1",
     "@types/react-redux": "7.1.16",
-    "@types/react-sortable-hoc": "0.7.1",
     "@types/react-window": "1.8.2",
     "@types/recharts": "1.8.19",
     "@types/redux-logger": "3.0.8",
@@ -322,7 +319,6 @@
     "mkdirp": "0.5.5",
     "mz": "2.7.0",
     "react": "16.14.0",
-    "react-beautiful-dnd": "11.0.5",
     "react-dom": "16.14.0",
     "react-redux": "7.2.2",
     "recharts": "2.0.9",
@@ -344,14 +340,16 @@
   },
   "dependencies": {
     "@brave/react-virtualized-auto-sizer": "^1.0.4",
+    "@dnd-kit/core": "6.0.3",
+    "@dnd-kit/sortable": "7.0.0",
     "@glif/filecoin-wallet-provider": "2.0.0-beta.12",
     "@ledgerhq/hw-app-eth": "6.24.1",
     "@ledgerhq/hw-transport-webhid": "6.24.1",
+    "@solana/web3.js": "1.44.2",
     "@types/jszip": "^3.1.6",
     "@types/parse-torrent": "^5.8.3",
     "@types/react-router-dom": "^5.1.9",
     "@types/webtorrent": "^0.109.0",
-    "@solana/web3.js": "1.44.2",
     "array-move": "^2.2.1",
     "bignumber.js": "^9.0.2",
     "bluebird": "^3.5.1",
@@ -363,7 +361,6 @@
     "qr-image": "^3.2.0",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
-    "react-sortable-hoc": "^1.10.1",
     "react-window": "^1.8.5",
     "redux-act": "^1.8.0",
     "redux-logger": "^3.0.6",
