Goal is to securely expose Google Play Store purchase token for Brave VPN to Brave owned websites (account.brave.com).
Fixes brave/brave-browser#21942

--- a/renderer/BUILD.gn
+++ b/renderer/BUILD.gn
@@ -16,6 +16,7 @@ source_set("renderer") {
     "//brave/components/brave_search/common",
     "//brave/components/brave_search/renderer",
     "//brave/components/brave_shields/common",
+    "//brave/components/brave_vpn/renderer",
     "//brave/components/brave_wallet/renderer",
     "//brave/components/cosmetic_filters/renderer",
     "//brave/renderer/brave_wallet/",
