--- a/components/brave_search/browser/BUILD.gn
+++ b/components/brave_search/browser/BUILD.gn
@@ -15,6 +15,7 @@ static_library("browser") {
     "//base",
     "//brave/components/brave_search/common",
     "//brave/components/brave_search/common:mojom",
+    "//brave/components/brave_search_conversion",
     "//brave/components/time_period_storage",
     "//components/prefs",
     "//components/search_engines",
