--- a/components/brave_search/renderer/BUILD.gn
+++ b/components/brave_search/renderer/BUILD.gn
@@ -17,6 +17,7 @@ source_set("renderer") {
     "//content/public/renderer",
     "//gin",
     "//mojo/public/cpp/bindings",
+    "//net",
     "//third_party/blink/public:blink",
     "//third_party/blink/public/common",
     "//third_party/blink/public/strings",
