--- a/utility/importer/sources.gni
+++ b/utility/importer/sources.gni
@@ -16,6 +16,8 @@ if (!is_android) {
     "//brave/utility/importer/brave_profile_import_impl.h",
     "//brave/utility/importer/chrome_importer.cc",
     "//brave/utility/importer/chrome_importer.h",
+    "//brave/utility/importer/edge_importer.cc",
+    "//brave/utility/importer/edge_importer.h",
   ]
 
   brave_utility_importer_deps += [
