--- a/browser/resources/settings/brave_sync_page/BUILD.gn
+++ b/browser/resources/settings/brave_sync_page/BUILD.gn
@@ -15,6 +15,7 @@ html_to_js("templatize") {
   js_files = [
     "brave_sync_code_dialog.js",
     "brave_sync_configure.js",
+    "brave_sync_delete_account_dialog.js",
     "brave_sync_page.js",
     "brave_sync_subpage.js",
     "brave_sync_setup.js",
