--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -294,6 +294,7 @@ source_set("ui") {
     "//brave/components/brave_shields/browser",
     "//brave/components/brave_vpn/buildflags",
     "//brave/components/brave_wayback_machine:buildflags",
+    "//brave/components/brave_tabs",
     "//brave/components/constants",
     "//brave/components/cosmetic_filters/resources/data:generated_resources",
     "//brave/components/crypto_dot_com/browser/buildflags:buildflags",
