--- a/components/brave_federated/BUILD.gn
+++ b/components/brave_federated/BUILD.gn
@@ -16,6 +16,7 @@ static_library("brave_federated") {
     "eligibility_service_observer.h",
     "features.cc",
     "features.h",
+    "notification_ad_task_contants.h",
     "operational_patterns.cc",
     "operational_patterns.h",
     "operational_patterns_util.cc",
