--- a/browser/ui/views/tabs/BUILD.gn
+++ b/browser/ui/views/tabs/BUILD.gn
@@ -1,18 +1,18 @@
 source_set("browser_tests") {
-    testonly = true
-    defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]
+  testonly = true
+  defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]
 
-    sources = [
-      "//brave/browser/ui/views/tabs/brave_tab_hover_browsertest.cc",
-    ]
+  sources = [ "//brave/browser/ui/views/tabs/brave_tab_hover_browsertest.cc" ]
 
-    deps = [
-        "//base",
-        "//chrome:resources",
-        "//chrome:strings",
-        "//chrome/browser",
-        "//chrome/common",
-        "//chrome/test:test_support",
-        "//chrome/test",
-    ]
+  deps = [
+    "//base",
+    "//brave/components/brave_tabs",
+    "//chrome:resources",
+    "//chrome:strings",
+    "//chrome/browser",
+    "//chrome/common",
+    "//chrome/test",
+    "//chrome/test:test_support",
+    "//components/prefs",
+  ]
 }
